--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,14 @@
 buildscript {
-    ext.kotlin_version = '1.3.61'
+    apply from: rootProject.file('deps/dependencies.gradle')
+
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath gradle_dependency.gradle
+        classpath gradle_dependency.kotlin
     }
 }
 
@@ -18,7 +16,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven { url 'https://jitpack.io' }
     }
 }
 
