--- a/core/build.gradle
+++ b/core/build.gradle
@@ -3,16 +3,25 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
+apply from: rootProject.file('deps/shared_dependencies.gradle')
+apply from: rootProject.file('deps/dagger_dependencies.gradle')
+apply from: rootProject.file('deps/retrofit_dependencies.gradle')
+apply from: rootProject.file('deps/test_dependencies.gradle')
+
+kapt {
+    generateStubs = true
+}
+
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.2"
+    compileSdkVersion compileSdk
+    buildToolsVersion buildTools
 
 
     defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion minSdk
+        targetSdkVersion targetSdk
+        versionCode canonicalVersionCode
+        versionName canonicalVersionName
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
@@ -31,110 +40,9 @@ android {
     }
 }
 
-ext {
-    supportLibVersion = '28.0.0'
-    retrofitVersion = '2.6.0'
-    rxAndroidVersion = '2.0.2'
-    rxJavaVersion = '2.1.7'
-    retrofit2RxJava2AdapterVersion = '2.6.0'
-    roomVersion = '1.1.0'
-    dagger2_version = '2.22.1'
-}
-
 dependencies {
-
-    // to convert LiveData in Flowable
-    implementation "android.arch.lifecycle:reactivestreams:1.1.1"
-
-    // Paper library to save selected language in SharedPref
-    implementation 'io.paperdb:paperdb:2.5'
-    //slide to close activity
-    implementation 'com.r0adkll:slidableactivity:2.0.6'
-    // Phone number mask for edit text
-    implementation 'com.github.reinaldoarrosi:maskededittext:1.1.0'
-    // Country picker
-    implementation 'com.hbb20:ccp:2.2.7'
-    // PullDownRefresh
-    implementation 'com.baoyz.pullrefreshlayout:library:1.2.0'
-
-//    implementation 'commons-validator:commons-validator:1.4.1'
-
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.5'
-    implementation group: 'javax.mail', name: 'mail', version: '1.5.0-b01'
-    implementation 'com.karumi:dexter:5.0.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime:2.1.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
-    //noinspection LifecycleAnnotationProcessorWithJava8
-    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.1.0'
-    //noinspection GradleCompatible
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
-    implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'androidx.multidex:multidex:2.0.1'
     // Glide
-    implementation 'com.squareup.okhttp3:okhttp:3.13.1'
-    implementation 'com.github.bumptech.glide:okhttp3-integration:4.7.1'
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
-    kapt 'com.github.bumptech.glide:compiler:4.9.0'
-    // Photo
-    implementation 'de.hdodenhof:circleimageview:3.0.0'
-    // Google
-    implementation 'com.google.android.gms:play-services-auth:17.0.0'
-    // Facebook
-    implementation 'com.facebook.android:facebook-login:4.40.0'
-    // Volley
-    implementation 'com.android.volley:volley:1.1.1'
-    implementation 'com.github.bumptech.glide:volley-integration:1.4.0@aar'
-    // Retrofit
-    implementation "com.squareup.retrofit2:retrofit:${retrofitVersion}"
-    implementation "com.squareup.retrofit2:converter-gson:${retrofitVersion}"
-    implementation "com.squareup.retrofit2:converter-moshi:${retrofitVersion}"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:${retrofitVersion}"
-    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
-    implementation group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.6.0'
-    // RxJava
-    implementation "io.reactivex.rxjava2:rxandroid:${rxAndroidVersion}"
-    implementation "io.reactivex.rxjava2:rxjava:${rxJavaVersion}"
-    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
-    // Room DB
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-alpha02"
-    kapt "androidx.lifecycle:lifecycle-compiler:2.2.0-alpha02"
-    implementation "androidx.room:room-rxjava2:2.2.0-alpha01"
-    implementation "androidx.room:room-runtime:2.2.0-alpha01"
-    kapt "androidx.room:room-compiler:2.2.0-alpha01"
-    // Dagger
-    implementation "com.google.dagger:dagger:${dagger2_version}"
+    implementation glide.glide
+    kapt glide.compiler
 
-    //noinspection OutdatedLibrary
-    implementation "com.google.dagger:dagger-android:${dagger2_version}"
-    implementation "com.google.dagger:dagger-android-support:${dagger2_version}"
-    kapt "com.google.dagger:dagger-compiler:${dagger2_version}"
-    kapt "com.google.dagger:dagger-android-processor:${dagger2_version}"
-    annotationProcessor "com.google.dagger:dagger-compiler:${dagger2_version}"
-    compileOnly 'javax.annotation:jsr250-api:1.0'
-    implementation 'javax.inject:javax.inject:1'
-    // MVVM
-    implementation 'org.jetbrains:annotations:16.0.1'
-    // Kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    // Navigation
-    implementation 'androidx.navigation:navigation-fragment:2.1.0-beta02'
-    implementation 'androidx.navigation:navigation-ui:2.1.0-beta02'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.1.0-beta02'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0-beta02'
-    // Testing
-    implementation group: 'javax.mail', name: 'mail', version: '1.5.0-b01'
-    implementation fileTree(dir: 'libs', includes: ['.jar'])
-    implementation fileTree(dir: 'libs', include: ['.jar'])
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    testImplementation 'junit:junit:4.12'
-}
-
-kapt {
-    generateStubs = true
 }
