--- a/deps/shared_dependencies.gradle
+++ b/deps/shared_dependencies.gradle
@@ -1,7 +1,8 @@
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation kotlin_dependency.stdlib
+    implementation androidx.core_ktx
 
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation lifecycle.extensions
+    implementation lifecycle.viewmodel_ktx
+    implementation lifecycle.java8
 }
