--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,11 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 apply from: rootProject.file('deps/shared_dependencies.gradle')
 apply from: rootProject.file('deps/test_dependencies.gradle')
+apply from: rootProject.file('deps/dagger_dependencies.gradle')
 
 android {
     compileSdkVersion compileSdk
@@ -39,6 +41,7 @@ dependencies {
     implementation androidx.app_compat
     implementation androidx.constraintlayout
     implementation androidx.recyclerview
+    kapt androidx.annotations
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
