--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 buildscript {
     apply from: rootProject.file('deps/dependencies.gradle')
+    ext {
+        kotlin_version = '1.3.70'
+    }
 
     repositories {
         google()
