--- a/core/build.gradle
+++ b/core/build.gradle
@@ -41,6 +41,8 @@ android {
 }
 
 dependencies {
+    implementation androidx.recyclerview
+
     // Glide
     implementation glide.glide
     kapt glide.compiler
